# LLM-OPS

./: .dockerignore  .env.example  .gitignore  CLEANUP_SUMMARY.md  Dockerfile  PROJECT_README.ipynb  README.md  compile_pipeline_with_evaluation.py  compiled_nutrition_pipeline_with_evaluation.yaml  create_deployment_guide.py  inference_predictions.csv  nutrition_aggregated_metrics.json  nutrition_evaluation_results.csv  nutrition_validation_report_20251020_090848.json  phi3_fine_tuning_test.ipynb  phi3_inference_test.ipynb  pyproject.toml  session2_practice.md  session3_practice.md  test_data_processing.py  test_gcp_setup.py  validate_nutrition_pipeline.py  view_examples.py  yoda_sentences.csv
compiled_pipelines/: PIPELINE_STATUS.py  compiled_nutrition_pipeline.yaml
docs/: PROJECT_ORGANIZATION.md
outputs/: nutrition_pipeline_summary.json  sample_input.json
pipeline_artifacts/: nutrition-assistant-training_20251020_085908.json  yoda-data-preprocessing_20251016_135007.json  yoda-model-training_20251016_162007.json  yoda-model-training_20251016_163920.json
scripts/: auto_undeploy.py  check_endpoint_status.py  check_id.py  check_pipeline_status.py  delete_endpoint.py  deploy_to_endpoint.py  finalize_deployment.py  find_model_uri.py  get_console_urls.py  get_model_artifact_uri.py  get_pipeline_logs.py  get_task_details.py  monitor_deployment.py  pipeline_runner.py  register_model_with_custom_handler.py  test_endpoint.py  undeploy_model.py  upload_dataset.py  watch_deployment.py
src/: constants.py  data_processing.py  handler.py
tests/: verify_pipeline.py
(+28 files in other folders)
